--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                             <li data-index="rs-1" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Linear.easeNone" data-easeout="Linear.easeNone" data-masterspeed="default" data-rotate="0" data-saveperformance="off"
                                                 data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 
-                                                <img src="house_1.jpeg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                                                <img src="images/houses/house_1.jpeg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
                                                 <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['470']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
@@ -293,7 +293,7 @@
                             <section class="full-height-section no-col-padding columns-stretch content-middle">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-note-2" data-url="house_2.jpeg"></a>
+                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-note-2" data-url="images/houses/house_1.jpeg"></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
@@ -301,9 +301,9 @@
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
                                                         <div class="sc_promo_image_wrap">
                                                             <div class="sc_promo_image bg_image_1">
-                                                                <img src="house_2.jpeg">
+                                                                <img src="images/houses/house_2.jpeg" style="height: 100%; object-fit: cover;">
                                                             </div>
-                                                            <a class="sc_promo_link2" href="house_3.jpeg">
+                                                            <a class="sc_promo_link2" href="images/houses/house_3.jpeg">
                                                                 <span>Altre</span>
                                                                 <span>FOTO</span>
                                                             </a>
