--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
 																							</svg>
                                                                                         </a>
                                                                                         <h6 class="sc_services_item_title">
-                                                                                            <a href="#"></a>
+                                                                                            <a href="#">Lavatrici smart</a>
                                                                                         </h6>
                                                                                         <div class="sc_services_item_subtitle">
                                                                                             <a href="#" title="View all posts in Apartments">Apartments</a>,
