--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                             <li data-index="rs-1" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Linear.easeNone" data-easeout="Linear.easeNone" data-masterspeed="default" data-rotate="0" data-saveperformance="off"
                                                 data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 
-                                                <img src="images/houses/02.webp" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                                                <img src="images/houses/01.webp" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
                                                 <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['470']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
@@ -59,7 +59,7 @@
                                                     data-transform_out="opacity:0;s:300;" data-start="2100" data-splitin="none" data-splitout="none" data-responsive_offset="on">Trova i migliori</div>
 
                                                 <h1 class="tp-caption   tp-resizeme  slide_title" id="slide-1-layer-1" data-x="center" data-hoffset="" data-y="center" data-voffset="-20" data-width="['1024']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;"
-                                                    data-transform_out="opacity:0;s:300;" data-start="2400" data-splitin="none" data-splitout="none" data-responsive_offset="on">APPARTAMENTI MODERNI IN<br>UN NUOVO COMPLESSO RESIDENZIALE</h1>
+                                                    data-transform_out="opacity:0;s:300;" data-start="2400" data-splitin="none" data-splitout="none" data-responsive_offset="on">APPARTAMENTI MODERNI</h1>
 
                                                 <div class="tp-caption rev-btn  tp-resizeme  theme_button slide_button" id="slide-1-layer-2" data-x="center" data-hoffset="" data-y="center" data-voffset="150" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;"
                                                     data-style_hover="c:rgba(0, 0, 0, 1.00);bg:rgba(255, 255, 255, 1.00);" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;s:300;" data-start="2700" data-splitin="none"
@@ -406,23 +406,51 @@
                                                                         <div class="swiper-wrapper">
                                                                             <div class="swiper-slide slider_image_1" data-image="images/image_07-1170x658.jpg" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Apartment&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Environment&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;"
                                                                                 data-title="The planned price increase" data-date="July 16, 2016">
-                                                                                <a href="#" class="slide_link"></a>
+                                                                                <!--
+                                                                                    <a href="#" class="slide_link"></a>
+                                                                                -->
+                                                                                <a href="#" class="slide_link" >
+                                                                                    <img src = "images/houses/02.jpeg"></img>
+                                                                                </a>
                                                                             </div>
                                                                             <div class="swiper-slide slider_image_2" data-image="images/image_04-1170x658.jpg" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
                                                                                 data-title="Start of installation of water and heating systems" data-date="July 12, 2016">
-                                                                                <a href="#" class="slide_link"></a>
+                                                                                <!--
+                                                                                    <a href="#" class="slide_link"></a>
+                                                                                -->
+                                                                                <a href="#" class="slide_link" >
+                                                                                    <img src = "images/houses/03.jpeg"></img>
+                                                                                </a>
                                                                             </div>
                                                                             <div class="swiper-slide slider_image_3" data-image="images/image_02-1170x658.jpg" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Apartment&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Views&lt;/a&gt;"
                                                                                 data-title="The second roof of Windsor is done" data-date="July 9, 2016">
-                                                                                <a href="#" class="slide_link"></a>
+                                                                                <!--
+                                                                                    <a href="#" class="slide_link"></a>
+                                                                                -->
+                                                                                <a href="#" class="slide_link" >
+                                                                                    <img src = "images/houses/04.jpeg" style = ""></img>
+                                                                                </a>
                                                                             </div>
                                                                             <div class="swiper-slide slider_image_4" data-image="images/image_05-1170x658.jpg" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Environment&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Views&lt;/a&gt;"
                                                                                 data-title="Our sales office holiday schedule" data-date="July 4, 2016">
-                                                                                <a href="#" class="slide_link"></a>
+                                                                                <!--
+                                                                                    <a href="#" class="slide_link"></a>
+                                                                                -->
+                                                                                <a href="#" class="slide_link" >
+                                                                                    <img src = "images/houses/05.jpeg"></img>
+                                                                                </a>
                                                                             </div>
                                                                             <div class="swiper-slide slider_image_5" data-image="images/image_13-1170x658.jpg" data-cats="&lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Interior&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Process&lt;/a&gt;, &lt;a href=&quot;#&quot; rel=&quot;category tag&quot;&gt;Visualizing Complex&lt;/a&gt;"
                                                                                 data-title="At your service: The Windsor concierge" data-date="July 2, 2016">
-                                                                                <a href="#" class="slide_link"></a>
+                                                                                <!--
+                                                                                    <a href="#" class="slide_link"></a>
+                                                                                -->
+                                                                                <!--
+                                                                                    <a href="#" class="slide_link" >
+                                                                                    <img src = "images/houses/06.jpeg" style="object-fit: fit;"></img>
+                                                                                </a>
+                                                                                -->
+                                                                                <img src = "images/houses/06.jpeg" style="object-fit: fit;"></img>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -526,7 +554,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure>
                                                                                                         <div>
-                                                                                                            <img src="images/maps/01.webp" alt="01" />
+                                                                                                            <img src="images/maps/01.jpeg" alt="01" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -588,7 +616,7 @@
                                                                                                 <div class="column-inner">
                                                                                                     <figure>
                                                                                                         <div>
-                                                                                                            <img src="images/maps/02.webp" alt="02" />
+                                                                                                            <img src="images/maps/02.jpeg" alt="02" />
                                                                                                         </div>
                                                                                                     </figure>
                                                                                                 </div>
@@ -1355,7 +1383,7 @@
 
                                                     <div id="sc_googlemap_1_wrap" class="sc_googlemap_wrap">
                                                         <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" data-zoom="16" data-style="dark">
-                                                            <iframe frameborder="0" style="border: 0px; width: 100%; height: 100%;" src="https://maps.google.com/maps?t=m&amp;output=embed&amp;iwloc=near&amp;z=12&amp;q=56-34+Waldron+St+Flushing%2C+NY+11368%2C+USA" aria-label="123, New Lenox Chicago, IL 60606, USA ">
+                                                            <iframe frameborder="0" style="border: 0px; width: 100%; height: 100%;" src="https://snazzymaps.com/style/35/avocado-world" aria-label="123, New Lenox Chicago, IL 60606, USA ">
 															</iframe>
                                                         </div>
                                                     </div>
