--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                                 <img src="images/houses/01.webp" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
-                                                <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['470']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
+                                                <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['700']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
                                                     data-transform_out="opacity:0;s:300;" data-start="1500" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                                                 </div>
 
@@ -303,12 +303,14 @@
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
                                                         <div class="sc_promo_image_wrap">
                                                             <div class="sc_promo_image bg_image_1">
-                                                                <img src="images/design/01.jpeg" style="height: 100%; object-fit: contain;">
+                                                                <img src="images/design/01.jpeg" style="height: 100%; object-fit: cover; width: 100%">
                                                             </div>
+                                                            <!--
                                                             <a class="sc_promo_link2" href="images/design/02.jpeg">
                                                                 <span>Altre</span>
                                                                 <span>FOTO</span>
                                                             </a>
+                                                            -->
                                                         </div>
                                                         <div class="sc_promo_text">
                                                             <div class="sc_promo_text_inner">
@@ -318,11 +320,13 @@
                                                                 <div class="sc_item_descr sc_promo_descr sc_align_default">Il design di ogni appartamento è stato realizzato singolarmente per massimizzare lo spazio e la luce. Smart Home Technology installed as standard in each apartment putting you in total control of your home at the
                                                                     touch of a button from wherever you might be.</div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
+                                                                    <!--
                                                                     <a href="#" class="sc_button sc_button_simple sc_button_size_normal sc_button_icon_left">
                                                                         <span class="sc_button_text">
 																			<span class="sc_button_title">Leggi di più</span>
                                                                         </span>
                                                                     </a>
+                                                                    -->
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -541,6 +545,7 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div class="height_small"></div>
+                                                                                                    <!--
                                                                                                     <div class="sc_item_button sc_button_wrap">
                                                                                                         <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
                                                                                                             <span class="sc_button_text">
@@ -548,6 +553,7 @@
                                                                                                             </span>
                                                                                                         </a>
                                                                                                     </div>
+                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
@@ -603,6 +609,7 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div class="height_small"></div>
+                                                                                                    <!--
                                                                                                     <div class="sc_item_button sc_button_wrap">
                                                                                                         <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
                                                                                                             <span class="sc_button_text">
@@ -610,6 +617,7 @@
                                                                                                             </span>
                                                                                                         </a>
                                                                                                     </div>
+                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
@@ -665,6 +673,7 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div class="height_small"></div>
+                                                                                                    <!--
                                                                                                     <div class="sc_item_button sc_button_wrap">
                                                                                                         <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
                                                                                                             <span class="sc_button_text">
@@ -672,6 +681,7 @@
                                                                                                             </span>
                                                                                                         </a>
                                                                                                     </div>
+                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
@@ -727,6 +737,7 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div class="height_small"></div>
+                                                                                                    <!--
                                                                                                     <div class="sc_item_button sc_button_wrap">
                                                                                                         <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
                                                                                                             <span class="sc_button_text">
@@ -734,6 +745,7 @@
                                                                                                             </span>
                                                                                                         </a>
                                                                                                     </div>
+                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
@@ -789,6 +801,7 @@
                                                                                                         </li>
                                                                                                     </ul>
                                                                                                     <div class="height_small"></div>
+                                                                                                    <!--
                                                                                                     <div class="sc_item_button sc_button_wrap">
                                                                                                         <a href="#" class="sc_button sc_button_default sc_button_size_normal sc_button_icon_left">
                                                                                                             <span class="sc_button_text">
@@ -796,6 +809,7 @@
                                                                                                             </span>
                                                                                                         </a>
                                                                                                     </div>
+                                                                                                    -->
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="column_container column-2_3">
